--- a/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
+++ b/intro-to-pytorch/Part 1 - Tensors in PyTorch (Exercises).ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors"
+    "## Calculate the output of this network using the weights and bias tensors\n",
+    "y = activation(torch.sum(features*weights)+bias)"
    ]
   },
   {
@@ -162,11 +163,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Calculate the output of this network using matrix multiplication"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "y = activation(torch.mm(features,weights.view(5,1))+bias)"
    ]
   },
   {
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,11 +240,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3171]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Your solution here"
+    "## Your solution here\n",
+    "h = activation(torch.mm(features, W1)+B1)\n",
+    "output = activation(torch.mm(h, W2)+B2)\n",
+    "print(output)"
    ]
   },
   {
@@ -265,9 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.07475861, 0.18944136, 0.18681591],\n",
+       "       [0.61698615, 0.56980633, 0.70194791],\n",
+       "       [0.19777638, 0.53466202, 0.11567961],\n",
+       "       [0.57604775, 0.88436445, 0.84050182]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.random.rand(4,3)\n",
@@ -276,9 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0748, 0.1894, 0.1868],\n",
+       "        [0.6170, 0.5698, 0.7019],\n",
+       "        [0.1978, 0.5347, 0.1157],\n",
+       "        [0.5760, 0.8844, 0.8405]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = torch.from_numpy(a)\n",
     "b"
@@ -286,11 +327,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.07475861, 0.18944136, 0.18681591],\n",
+       "       [0.61698615, 0.56980633, 0.70194791],\n",
+       "       [0.19777638, 0.53466202, 0.11567961],\n",
+       "       [0.57604775, 0.88436445, 0.84050182]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.07475861, 0.18944136, 0.18681591],\n",
+       "       [0.61698615, 0.56980633, 0.70194791],\n",
+       "       [0.19777638, 0.53466202, 0.11567961],\n",
+       "       [0.57604775, 0.88436445, 0.84050182]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Numpy array matches new values from Tensor\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1495, 0.3789, 0.3736],\n",
+       "        [1.2340, 1.1396, 1.4039],\n",
+       "        [0.3956, 1.0693, 0.2314],\n",
+       "        [1.1521, 1.7687, 1.6810]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Multiply PyTorch Tensor by 2, in place\n",
+    "b.mul_(2)"
    ]
   },
   {
@@ -298,26 +401,6 @@
    "metadata": {},
    "source": [
     "The memory is shared between the Numpy array and Torch tensor, so if you change the values in-place of one object, the other will change as well."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Multiply PyTorch Tensor by 2, in place\n",
-    "b.mul_(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Numpy array matches new values from Tensor\n",
-    "a"
    ]
   }
  ],
@@ -337,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
